# uppaal_sdn_isac

./: .gitignore  Application_service_layer_formalization.tex  COMMAND_REFERENCE.md  PHY_SPECIFIC_LAYER_PROGRESS.md  PHY_SPECIFIC_LAYER_TASKS.md  README.md  mcp_conf.conf  pyproject.toml  requirements.txt
.uppaal_mcp_workspace/: Application_service_layer_uppaal.xml
.uppaal_mcp_workspace/example_phy_contract_skeleton/: model.xml  queries.q
.uppaal_mcp_workspace/mac_diagram_smoke/: layout_validation.json  model.dot  model_map.md
.uppaal_mcp_workspace/mac_generated/: layout_validation.json  model.xml
.uppaal_mcp_workspace/mac_generated_debug_smoke/: channels_map.md  model.xml  policy_map.md  template_map.md
.uppaal_mcp_workspace/mac_generated_minimal_smoke/: contract.json  queries.q
.uppaal_mcp_workspace/mac_generated_smoke/: layout_validation.json
.uppaal_mcp_workspace/mac_property_pack_smoke/: property_pack.json  queries.json
.uppaal_mcp_workspace/mac_report_smoke/: model_summary.md  properties.csv  queries.q  report.md
docs/: phy_layer_usage.md
goals/: PHY_SPECIFIC_LAYER_PROGRESS.md  PHY_SPECIFIC_LAYER_TASKS.md  mac-specific-layer-progress.md  mac-specific-layer-tasks.md  sdn-ric-control-plane-tasks.md  visual-readable-goal-2.md  visual-readable-goal.md
levels_tex/: Application_service_layer_formalization.tex  MAC_resource_scheduling_formalization.tex  SDN_RIC_control_plane_formalization.tex  samplepaper.tex
tests/: test_mac_layer.py  test_paths.py  test_phy_layer.py  test_sdn_layer.py  test_validation.py  test_verifyta_parser.py
(+182 files in other folders)
